@@ -1,3 +1,13 @@
+2022-10-09  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.1.1-alpha11 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha11: Tangentially Speaking';git push
+	git tag -a 5.1.1-alpha11 -m '';git push --tags
+
+	* Check stdin for input filenames as last resort not first resort
+
+	* ncks/ncrename/ncatted require -o for output file if stdin for input
+
 2022-10-07  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.1-alpha10 release procedure:
